--- a/medicenter/assets/css/template.css
+++ b/medicenter/assets/css/template.css
@@ -34,11 +34,12 @@ nav ul{
 }
 nav a {
     display: block;
-    padding: 15px;
+    padding: 10px;
     text-decoration: none;
     text-transform: uppercase;
     color: #727272;
-}
+    font-size: 13px;
+  }
 nav .active a,
 nav a:hover {
     background-color: #39aae1;
@@ -127,7 +128,7 @@ nav a:hover {
     font-size: 14px;
     line-height: 1.3;
     font-weight: bold;
-    padding: 8px 0px;
+    padding: 14px 0px;
     border-bottom: 1px solid #0079c7;
     margin-left: 8px;
     margin-right: 8px;
@@ -138,7 +139,7 @@ nav a:hover {
     font-size: 14px;
     line-height: 1.3;
     font-weight: bold;
-    padding-bottom: 8px;
+    padding-bottom: 14px;
     border-bottom: 1px solid #0079c7;
     margin-left: 8px;
     margin-right: 8px;
@@ -176,28 +177,44 @@ nav a:hover {
 article {
     flex: 1;
     min-width: 300px;
-    margin-right: 20px;
-    margin-bottom: 30px;
-}
-article a {
+    margin-right: 30px;
+    margin-top: 30px;
+    border-bottom: 1px solid #e2e1e1;
+  }
+  article a {
     text-decoration: none;
-}
-article .news_data {
+  }
+  article a .news_title:hover {
+    text-decoration: underline;
+  }
+  article .news_data {
     display: flex;
-}
+  }
 article .news_posted_at {
     background-color: #2b4c99;
-    color: #FFF;
+    color: #fff;
     font-size: 12px;
-    padding: 10px;
-    margin-right: 2px ;
-}
+    padding: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-right: 2px;
+    
+  }
 article .news_comments {
     background-color: #39aae1;
     color: #FFF;
-    font-size: 12px;
+    font-size: 15px;
     padding: 10px;
 }
+article .news_posted_at::after {
+    content: "";
+    display: block;
+    position: absolute;
+    margin-top: 12px;
+    margin-left: -12px;
+    border: 3px solid;
+    border-color: #2b4c99 transparent transparent #2b4c99;
+  }
 article .news_thumbnail img {
     width: 100%;
     height: auto;  
@@ -215,6 +232,89 @@ article .news_resume {
     color: #5c5c5c;
     font-size: 14px;
     line-height: 20px;
+    padding-bottom: 30px;
+}
+section .page_blog a {
+  display: flex;
+  justify-content: right;
+  font-size: 14px;
+  text-decoration: underline dotted;
+  text-underline-offset: 3px;
+  color: #0079c7;
+  margin-top: 20px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+.page_blog a:hover {
+  text-decoration: underline;
+}
+.widget_body_departs {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.widget_departs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 155px;
+  height: 155px;
+  margin-bottom: 20px;
+  background-color: #39aae1;
+  color: #2b4c99;
+  text-decoration: none;
+}
+.widget_departs:hover {
+  background-color: #6dbde6 ;
+}
+.widget_departs img {
+  position: absolute;
+  width: 90px;
+  
+}
+.widget_departs p {
+  align-items: top;
+}
+.widget_body_title {
+  color: #555555;
+  font-size: 14px;
+  line-height: 20px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #e2e1e1;
+}
+.widget_body_contacts {
+  display: flex;
+  align-items: center;
+  color: #555555;
+  font-size: 14px;
+  line-height: 20px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  border-bottom: 1px solid #e2e1e1;
+}
+.widget_body_contacts .tel {
+  text-decoration: none;
+  color: #555555;
+}
+.widget_body_contacts a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: black;
+}
+.widget_body_contacts a:hover {
+  text-decoration: underline;
+  color: #0079c7;
+}
+.widget_body_contacts .tel:hover {
+  text-decoration: none;
+  color: #0079c7;
+}
+.widget_body_contacts img {
+  max-width: 29px;
+}
+mytag {
+  margin-left: 10px;
 }
 footer {
     background-color: #1e1e1e;
@@ -260,7 +360,7 @@ footer {
     text-decoration: underline;
   }
   .flexColumn {
-    flex-direction: column;
+    flex-direction: column; 
   }
 .footer_area {
     display: flex;
@@ -286,7 +386,6 @@ footer {
   .footer_area_3 {
     flex: 1;
   }
-  
   .widget_title {
     margin-top: 24px;
     margin-bottom: 30px;
@@ -424,6 +523,7 @@ footer {
     #geral aside {
         padding: 20px;
     }
+    
     .footer_menu {
         flex-direction: column;
     }
