--- a/homenagem page/assets/css/style.css
+++ b/homenagem page/assets/css/style.css
@@ -106,6 +106,7 @@ footer {
     color: black;
     padding: 15px;
     text-align: center;
+    
 }
 footer a {
     font-weight: bold;
@@ -138,30 +139,52 @@ footer a:hover {
     text-shadow: 1px 1px 3px black;
     padding: 10px;
     text-align: justify;
-
 }
 .final-content img {
 	margin-top: 15px;
     width: 250px;
 }
-.final-content2 img {
-    margin-left: 5px;
-    width: 150px;
+.mds {
+    display: flex;
 }
-.final-content2 h1 {
+.final_content_2 img {
+    width: 150px;
+    padding-left: 50px;
+}
+.final_content_2_1 h1 {
     margin-top: 20px;
     color: #FFF;
-    font-size: 25px;
-    text-align: left;
+    font-size: 30px;
     padding-left: 20px;
     font-family: Arial, Verdana, Geneva, Tahoma, sans-serif;
     text-shadow: 2px 2px 3px black;
 }
-.final-content2 p {
+.final_content_2_1 p {
     font-size: 18px;
-	justify-content: right;
+	justify-content: left;
     font-family: Arial, Verdana, Geneva, Tahoma, sans-serif;
     color: #FFF;
     text-shadow: 1px 1px 3px black;
     padding: 10px;
     text-align: justify;
+    margin-right: 30px;
+}
+.death h1 {
+    margin-top: 25px;
+    color: #FFF;
+    font-size: 30px;
+    padding-left: 20px;
+    font-family: Arial, Verdana, Geneva, Tahoma, sans-serif;
+    text-shadow: 2px 2px 3px black;
+}
+.death p {
+    font-size: 18px;
+	justify-content: left;
+    font-family: Arial, Verdana, Geneva, Tahoma, sans-serif;
+    color: #FFF;
+    text-shadow: 1px 1px 3px black;
+    padding: 10px;
+    text-align: justify;
+    margin-right: 30px; 
+    margin-bottom: 0;
+}
