--- a/projetoAwax/assets/css/style.css
+++ b/projetoAwax/assets/css/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    overflow-x: hidden;
+}
 header {
     background-color: black;
     height: 100px;
@@ -18,13 +23,131 @@ header {
 .logo {
     width: 100px;
 }
+.logoimg {
+    width: 80px;
+    height: 80px;
+    background-color: #B28756;
+    border-radius: 40px;
+}
 .menu {
     flex: 1;
     display: flex;
     justify-content: flex-end;
 }
-.logoimg {
-    width: 80px;
-    height: 80px;
+.menu ul, 
+.menu li {
+    list-style: none;
+}
+.menu ul {
+    display: flex;
+}
+.menu li a {
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    border-bottom: 5px solid black;
+}
+.menu li a:hover {
+    border-bottom: 5px solid #B28756;
+    color: #B28756;
+}
+.menu .active a {
+    border-bottom: 5px solid #B28756;
+}
+.banner {
+    height: calc(100vh - 100px);
+    background-color: #333;
+    background-image: url('../images/bg.jpg');
+    background-size: cover;
+    background-position: bottom;
+    overflow: hidden;
+}
+.banner .sliders {
+    width: 1000vw;
+    height: 100%;
+}
+.banner .slide {
+    width: 100vw;
+    height: 100%;
+    display: inline-block;
+    background-color: rgba(0,0,0, 0.8);
+}
+.banner .slidearea {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    flex-direction: column;
+}
+.banner h1 {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 50px;
+
+}
+.banner h1 span {
+    color: #B28756;
+}
+.banner h2 {
+    text-transform: uppercase;
+    margin-top: 20px;
+
+}
+.banner a {
+    display: block;
     background-color: #B28756;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 13px;
+    text-decoration: none;
+    padding: 10px 30px ;
+    border-radius: 10px;
+    margin-top: 25px ;
+    font-weight: 600;
+}
+.default {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.default .section-title,
+.default .section-desc {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.default .section-title {
+    font-size: 20px;
+}
+.default .section-desc{
+    font-size: 12px;
+    color: #CCC;
+    margin-top: 13px;
+    margin-bottom: 40px;
+
+}
+.default .section-body {
+    max-width: 1140px;
+    margin: auto;
+    min-height: 100px;
+    background-color: #CCC;
+}
+.default .light {
+    background-color: #F7f7f7;
+
+}
+.default .light .section-title {
+    color: #000;
+}
+.default .dark {
+    background-color: #000;
+}
+.default .dark .section-title {
+    color:#FFF;
 }
