--- a/projetoAwax/assets/css/style.css
+++ b/projetoAwax/assets/css/style.css
@@ -60,6 +60,18 @@ header {
 .menu .active a {
     border-bottom: 5px solid #B28756;
 }
+.button {
+    display: inline-block;
+    background-color: #B28756;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 13px;
+    text-decoration: none;
+    padding: 10px 30px ;
+    border-radius: 10px;
+    margin-top: 25px ;
+    font-weight: 600;
+}
 .banner {
     height: calc(100vh - 100px);
     background-color: #333;
@@ -100,18 +112,6 @@ header {
     margin-top: 20px;
 
 }
-.banner a {
-    display: block;
-    background-color: #B28756;
-    color: #FFF;
-    text-transform: uppercase;
-    font-size: 13px;
-    text-decoration: none;
-    padding: 10px 30px ;
-    border-radius: 10px;
-    margin-top: 25px ;
-    font-weight: 600;
-}
 .default {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -128,7 +128,7 @@ header {
 .default .section-desc{
     font-size: 12px;
     color: #CCC;
-    margin-top: 13px;
+    margin-top: 10px;
     margin-bottom: 40px;
 
 }
@@ -136,18 +136,51 @@ header {
     max-width: 1140px;
     margin: auto;
     min-height: 100px;
-    background-color: #CCC;
 }
 .default .light {
     background-color: #F7f7f7;
 
 }
-.default .light .section-title {
+.default .light .section-title,
+ .default .light .section-body {
     color: #000;
 }
 .default .dark {
     background-color: #000;
 }
-.default .dark .section-title {
+.default .dark .section-title,
+.default .dark .section-body {
     color:#FFF;
+}
+
+
+
+
+
+
+
+
+
+
+/*
+CSS DE ÁREAS ESPECÍFICAS
+*/
+.section-aboutus {
+    display: flex;
+
+}
+.section-aboutus--left {
+    flex: 1;
+}
+.section-aboutus--left p {
+    font-size: 14px;
+    line-height: 25px;
+}
+.section-aboutus--right {
+    width: 520px;
+    text-align: center;
+}
+.section-aboutus--right img { 
+    width: 480px;
+    box-shadow: 0px 5px 10px #333;
 }
